--- a/frontend/src/components/school/TeacherTimeTable/TeacherTimeTable.css
+++ b/frontend/src/components/school/TeacherTimeTable/TeacherTimeTable.css
@@ -1,10 +1,10 @@
 /* TeacherTimeTable.css - All classes end with 29 */
 
 .tt-container29 {
-   margin-top: 100px;
+   margin-top: 90px;
   margin-left: 250px;
   padding: 20px;
-  background: #f8f3f6;
+  background: #E7E7ED;
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
 }
